results/SVCOMP/specgen/log-BugTestGen119-2024_02_24_18_24_35.txt
import java.util.Random;

public class BugTestGen119 {
  /*@ public normal_behavior
    @    ensures \result ==> tmp.equals("true");
    @    ensures !\result ==> tmp.equals("false");
    @*/
  public static boolean main(String[] args) {
    boolean booleanValue = new Random().nextBoolean();

    String tmp = String.valueOf(booleanValue);
    if (booleanValue) return tmp.equals("true");
    else return tmp.equals("false");
  }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:5: error: cannot find symbol
    @    ensures \result ==> tmp.equals("true");
                             ^
  symbol:   variable tmp
  location: class BugTestGen119
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:6: error: cannot find symbol
    @    ensures !\result ==> tmp.equals("false");
                              ^
  symbol:   variable tmp
  location: class BugTestGen119
2 errors

import java.util.Random;

public class BugTestGen119 {
  /*@ public normal_behavior
    @    ensures \result ==> String.valueOf(\result).equals("true");
    @    ensures !\result ==> String.valueOf(\result).equals("false");
    @*/
  public static boolean main(String[] args) {
    boolean booleanValue = new Random().nextBoolean();

    String tmp = String.valueOf(booleanValue);
    if (booleanValue) return tmp.equals("true");
    else return tmp.equals("false");
  }
}

